--- a/web/template/layout/base.gohtml
+++ b/web/template/layout/base.gohtml
@@ -5,14 +5,14 @@
         <meta charset="utf-8">
         <title>MLPA Beta</title>
 
-        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="{{ .Prefix }} /assets/images/favicon.ico" type="image/x-icon">
-        <link rel="mask-icon" href="{{ .Prefix }} /assets/images/govuk-mask-icon.svg" color="blue">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ .Prefix }} /assets/images/govuk-apple-touch-icon-180x180.png" >
-        <link rel="apple-touch-icon" sizes="167x167" href="{{ .Prefix }} /assets/images/govuk-apple-touch-icon-167x167.png" >
-        <link rel="apple-touch-icon" sizes="152x152" href="{{ .Prefix }} /assets/images/govuk-apple-touch-icon-152x152.png" >
-        <link rel="apple-touch-icon" href="{{ .Prefix }} /assets/images/govuk-apple-touch-icon.png" >
+        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="{{ .Prefix }}/static/assets/images/favicon.ico" type="image/x-icon">
+        <link rel="mask-icon" href="{{ .Prefix }} /static/assets/images/govuk-mask-icon.svg" color="blue">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon-180x180.png" >
+        <link rel="apple-touch-icon" sizes="167x167" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon-167x167.png" >
+        <link rel="apple-touch-icon" sizes="152x152" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon-152x152.png" >
+        <link rel="apple-touch-icon" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon.png" >
 
-        <link href="{{ .Prefix }} /stylesheets/all.css" rel="stylesheet">
+        <link href="{{ .Prefix }}/static/stylesheets/all.css" rel="stylesheet">
     </head>
 
     <body class="govuk-template__body">
@@ -20,7 +20,7 @@
             {{template "main" .}}
         </main>
 
-        <script src="{{ .Prefix }} /javascript/main.js"></script>
+        <script src="{{ .Prefix }}/static/javascript/main.js"></script>
     </body>
     </html>
 {{ end }}
