--- a/web/assets/main.scss
+++ b/web/assets/main.scss
@@ -1,1 +1,5 @@
+$govuk-assets-path: "/static/assets/";
+
 @import "node_modules/govuk-frontend/govuk/all";
+@import "node_modules/@ministryofjustice/frontend/moj/all";
+
