Include MOJ frontend JS and CSS

--- a/web/template/layout/base.gohtml
+++ b/web/template/layout/base.gohtml
@@ -115,7 +115,7 @@
             <a href="#" class="govuk-back-link">Back</a>
 
             <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
-                <h1 class="govuk-heading-xl">Customised page template</h1>
+                {{template "main" .}}
             </main>
         </div>
 
