--- a/web/template/layout/base.gohtml
+++ b/web/template/layout/base.gohtml
@@ -10,14 +10,14 @@
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="{{ .Prefix }}/static/assets/images/favicon.ico" type="image/x-icon">
-        <link rel="mask-icon" href="{{ .Prefix }} /static/assets/images/govuk-mask-icon.svg" color="blue">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon-180x180.png" >
-        <link rel="apple-touch-icon" sizes="167x167" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon-167x167.png" >
-        <link rel="apple-touch-icon" sizes="152x152" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon-152x152.png" >
-        <link rel="apple-touch-icon" href="{{ .Prefix }}/static/assets/images/govuk-apple-touch-icon.png" >
+        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/static/assets/images/favicon.ico" type="image/x-icon">
+        <link rel="mask-icon" href="/static/assets/images/govuk-mask-icon.svg" color="blue">
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/assets/images/govuk-apple-touch-icon-180x180.png" >
+        <link rel="apple-touch-icon" sizes="167x167" href="/static/assets/images/govuk-apple-touch-icon-167x167.png" >
+        <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/images/govuk-apple-touch-icon-152x152.png" >
+        <link rel="apple-touch-icon" href="/static/assets/images/govuk-apple-touch-icon.png" >
 
-        <link href="{{ .Prefix }}/static/stylesheets/all.css" rel="stylesheet">
+        <link href="/static/stylesheets/all.css" rel="stylesheet">
     </head>
 
     <body class="govuk-template__body app-body-class" data-test="My value" data-other="report:details">
@@ -162,7 +162,7 @@
             </div>
         </footer>
 
-        <script src="{{ .Prefix }}/static/javascript/main.js"></script>
+        <script src="/static/javascript/main.js"></script>
     </body>
 
 </html>
