--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -3,7 +3,7 @@
   <html lang="en" class="govuk-template app-html-class">
     <head>
       <meta charset="utf-8">
-      <title>MLPA Beta</title>
+      <title>{{ .L.T "serviceName" }}</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
       <meta name="theme-color" content="blue">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,33 +20,30 @@
       <script>
         document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
       </script>
-      <div class="govuk-cookie-banner " data-nosnippet role="region" aria-label="Cookies on [name of service]">
+      <div class="govuk-cookie-banner" data-nosnippet role="region" aria-label="{{ .L.T "cookiesOn" }}">
         <div class="govuk-cookie-banner__message govuk-width-container">
-
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-              <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on Make a lasting power of attorney</h2>
-
+              <h2 class="govuk-cookie-banner__heading govuk-heading-m">{{ .L.T "cookiesOn" }}</h2>
               <div class="govuk-cookie-banner__content">
-                <p class="govuk-body">We use some essential cookies to make this service work.</p>
-                <p class="govuk-body">We'd also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+                {{ .L.HTML "cookiesContent" }}
               </div>
             </div>
           </div>
 
           <div class="govuk-button-group">
             <button value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-              Accept analytics cookies
+              {{ .L.T "acceptCookies" }}
             </button>
             <button value="reject" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-              Reject analytics cookies
+              {{ .L.T "rejectCookies" }}
             </button>
-            <a class="govuk-link" href="#">View cookies</a>
+            <a class="govuk-link" href="#">{{ .L.T "viewCookies" }}</a>
           </div>
         </div>
       </div>
 
-      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
+      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">{{ .L.T "skipToMainContent" }}</a>
 
       <header class="govuk-header " role="banner" data-module="govuk-header">
         <div class="govuk-header__container app-width-container">
@@ -69,29 +66,8 @@
           </div>
           <div class="govuk-header__content">
             <a href="#" class="govuk-header__link govuk-header__service-name">
-              Make a lasting power of attorney
+              {{ .L.T "serviceName" }}
             </a>
-            <nav aria-label="Menu" class="govuk-header__navigation ">
-              <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu">Menu</button>
-
-              <ul id="navigation" class="govuk-header__navigation-list">
-                <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-                  <a class="govuk-header__link" href="#1">
-                    Navigation item 1
-                  </a>
-                </li>
-                <li class="govuk-header__navigation-item">
-                  <a class="govuk-header__link" href="#2">
-                    Navigation item 2
-                  </a>
-                </li>
-                <li class="govuk-header__navigation-item">
-                  <a class="govuk-header__link" href="#3">
-                    Navigation item 3
-                  </a>
-                </li>
-              </ul>
-            </nav>
           </div>
         </div>
       </header>
@@ -103,11 +79,28 @@
               beta
             </strong>
             <span class="govuk-phase-banner__text">
-              This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+              {{ .L.HTML "newServiceContent" }}
             </span>
           </p>
         </div>
-
+        
+        <div class="govuk-clearfix">          
+          <ul class="trans-switch" id="language-switch" aria-label="Change your language">
+            <li class="govuk-list trans-switch__list govuk-body-s" id="language-switch-en" lang="en-gb">
+              {{ if isWelsh .Lang }}<a href="/" class="govuk-link"><span class="govuk-visually-hidden">Change language to </span>{{ end }}
+                {{ if isEnglish .Lang }}<span class="govuk-visually-hidden">Current language is </span>{{ end }}
+                English
+                {{ if isWelsh .Lang }}</a>{{ end }}
+            </li>
+            <li class="govuk-list trans-switch__list govuk-body-s" id="language-switch-cy" lang="cy-gb">
+              {{ if isEnglish .Lang }}<a href="/cy/" class="govuk-link" aria-label="Newid iaith i'r Gymraeg">{{ end }}
+                Cymraeg
+                {{ if isEnglish .Lang }}</a>{{ end }}
+              {{ if isWelsh .Lang }}<span class="govuk-visually-hidden"> yw'r iaith bresennol</span>{{ end }}
+            </li>
+          </ul>
+        </div>
+        
         <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
           {{ template "main" . }}
         </main>
@@ -117,26 +110,26 @@
         <div class="govuk-width-container ">
           <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-              <h2 class="govuk-visually-hidden">Support links</h2>
+              <h2 class="govuk-visually-hidden">{{ .L.T "supportLinks" }}</h2>
               <ul class="govuk-footer__inline-list">
                 <li class="govuk-footer__inline-list-item">
                   <a class="govuk-footer__link" href="#1">
-                    Help
+                    {{ .L.T "help" }}
                   </a>
                 </li>
                 <li class="govuk-footer__inline-list-item">
                   <a class="govuk-footer__link" href="#2">
-                    Cookies
+                    {{ .L.T "cookies" }}
                   </a>
                 </li>
                 <li class="govuk-footer__inline-list-item">
                   <a class="govuk-footer__link" href="#3">
-                    Contact
+                    {{ .L.T "contact" }}
                   </a>
                 </li>
                 <li class="govuk-footer__inline-list-item">
                   <a class="govuk-footer__link" href="#4">
-                    Terms and conditions
+                    {{ .L.T "termsAndConditions" }}
                   </a>
                 </li>
               </ul>
@@ -145,12 +138,11 @@
                 <path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" />
               </svg>
               <span class="govuk-footer__licence-description">
-                All content is available under the
-                <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated
+                {{ .L.HTML "openGovernmentLicenceContent" }}
               </span>
             </div>
             <div class="govuk-footer__meta-item">
-              <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">© Crown copyright</a>
+              <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">{{ .L.T "crownCopyright" }}</a>
             </div>
           </div>
         </div>
