--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -46,7 +46,7 @@
       <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">{{ .L.T "skipToMainContent" }}</a>
 
       <header class="govuk-header " role="banner" data-module="govuk-header">
-        <div class="govuk-header__container app-width-container">
+        <div class="govuk-header__container govuk-width-container">
           <div class="govuk-header__logo">
             <a href="#" class="govuk-header__link govuk-header__link--homepage">
               <span class="govuk-header__logotype">
