--- a/app/web/template/donor_details.gohtml
+++ b/app/web/template/donor_details.gohtml
@@ -12,12 +12,13 @@
 
             {{ template "error-summary" . }}
 
-            {{ template "input" (input . "first-name" "yourFirstName" .Form.FirstName "classes" "govuk-input--width-20") }}
-            {{ template "input" (input . "last-name" "yourLastName" .Form.LastName "classes" "govuk-input--width-20") }}
+            {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
+            {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+            {{ template "input" (input . "other-names" "otherNames" .Form.OtherNames "classes" "govuk-input--width-20") }}
 
             <div class="govuk-form-group {{ if index .Errors "date-of-birth" }}govuk-form-group--error{{ end }} govuk-!-margin-bottom-6">
               <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">{{ .L.T "yourDateOfBirth" }}</legend>
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">{{ .L.T "dateOfBirth" }}</legend>
                 <div id="date-of-birth-hint" class="govuk-hint">
                   {{ .L.T "dateOfBirthHint" }}
                 </div>
