--- a/app/web/template/donor_address.gohtml
+++ b/app/web/template/donor_address.gohtml
@@ -7,7 +7,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-              <h1 class="govuk-fieldset__heading">{{ .L.T "yourHomeAddress" }}</h1>
+              <h1 class="govuk-fieldset__heading">{{ .L.T "homeAddress" }}</h1>
             </legend>
 
             {{ template "error-summary" . }}
@@ -40,7 +40,7 @@
 
               <p class="govuk-body">
                 <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
-                  {{ .L.T "cantFindYourAddress" }}
+                  {{ .L.T "cantFindAddress" }}
                 </a>
               </p>
 
