--- a/app/web/assets/main.scss
+++ b/app/web/assets/main.scss
@@ -3,6 +3,7 @@ $moj-assets-path: "/static/assets/";
 
 @import "node_modules/govuk-frontend/govuk/all";
 @import "node_modules/@ministryofjustice/frontend/moj/all";
+@import "_task_list.scss";
 
 .trans-switch {
   float: right;
