--- a/app/web/template/layout/details.gohtml
+++ b/app/web/template/layout/details.gohtml
@@ -2,11 +2,11 @@
   <details class="govuk-details" data-module="govuk-details">
     <summary class="govuk-details__summary">
       <span class="govuk-details__summary-text">
-        {{ .top.L.T .name }}
+        {{ tr .top.App .name }}
       </span>
     </summary>
     <div class="govuk-details__text">
-      {{ .top.L.HTML .detail }}
+      {{ trHtml .top.App .detail }}
     </div>
   </details>
 {{ end }}
