--- a/app/web/template/layout/error-summary.gohtml
+++ b/app/web/template/layout/error-summary.gohtml
@@ -2,13 +2,13 @@
   {{ if .Errors }}
     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
       <h2 class="govuk-error-summary__title" id="error-summary-title">
-        {{ .L.T "thereIsAProblem" }}
+        {{ tr .App "thereIsAProblem" }}
       </h2>
       <div class="govuk-error-summary__body">
         <ul class="govuk-list govuk-error-summary__list">
           {{ range $k, $v := .Errors }}
             <li>
-              <a href="#f-{{ $k }}">{{ $.L.T $v }}</a>
+              <a href="#f-{{ $k }}">{{ tr $.App $v }}</a>
             </li>
           {{ end }}
         </ul>
