--- a/app/web/template/lpa_type.gohtml
+++ b/app/web/template/lpa_type.gohtml
@@ -5,46 +5,46 @@
     <div class="govuk-grid-column-two-thirds">
       {{ template "error-summary" . }}
       
-      <h1 class="govuk-heading-xl">{{ .L.T "whichTypeOfLpaToMake" }}</h1>
+      <h1 class="govuk-heading-xl">{{ tr .App "whichTypeOfLpaToMake" }}</h1>
       
       <form novalidate method="post">
-        {{ .L.HTML "whichTypeOfLpaToMakeContent" }}
+        {{ trHtml .App "whichTypeOfLpaToMakeContent" }}
         
         <div class="govuk-form-group {{ if index .Errors "lpa-type" }}govuk-form-group--error{{ end }}">
           {{ template "error-message" (errorMessage . "lpa-type") }}
           
           <div class="govuk-radios {{ if index .Errors "lpa-type" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="f-lpa-type" name="lpa-type" type="radio" value="pfa" aria-describedby="lpa-type-item-hint">
+              <input class="govuk-radios__input" id="f-lpa-type" name="lpa-type" type="radio" value="pfa" aria-describedby="lpa-type-item-hint" {{ if eq .Type "pfa" }}checked{{ end }}>
               <label class="govuk-label govuk-radios__label" for="f-lpa-type">
-                {{ .L.T "lpaTypePfa" }}
+                {{ tr .App "lpaTypePfa" }}
               </label>
               <div id="lpa-type-item-hint" class="govuk-hint govuk-radios__hint">
-                {{ .L.T "lpaTypePfaHint" }}
+                {{ tr .App "lpaTypePfaHint" }}
               </div>
             </div>
 
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="f-lpa-type-2" name="lpa-type" type="radio" value="hw" aria-describedby="lpa-type-2-item-hint">
+              <input class="govuk-radios__input" id="f-lpa-type-2" name="lpa-type" type="radio" value="hw" aria-describedby="lpa-type-2-item-hint" {{ if eq .Type "hw" }}checked{{ end }}>
               <label class="govuk-label govuk-radios__label" for="f-lpa-type-2">
-                {{ .L.T "lpaTypeHw" }}
+                {{ tr .App "lpaTypeHw" }}
               </label>
               <div id="lpa-type-2-item-hint" class="govuk-hint govuk-radios__hint">
-                {{ .L.T "lpaTypeHwHint" }}
+                {{ tr .App "lpaTypeHwHint" }}
               </div>
             </div>
             
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="f-lpa-type-3" name="lpa-type" type="radio" value="both">
+              <input class="govuk-radios__input" id="f-lpa-type-3" name="lpa-type" type="radio" value="both" {{ if eq .Type "both" }}checked{{ end }}>
               <label class="govuk-label govuk-radios__label" for="f-lpa-type-3">
-                {{ .L.T "lpaTypeBoth" }}
+                {{ tr .App "lpaTypeBoth" }}
               </label>
             </div>
           </div>
         </div>
 
         <button type="submit" class="govuk-button" data-module="govuk-button">
-          {{ .L.T "continue" }}
+          {{ tr .App "continue" }}
         </button>
       </form>
     </div>
