--- a/app/web/template/start.gohtml
+++ b/app/web/template/start.gohtml
@@ -3,12 +3,12 @@
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">{{ .L.T "serviceName" }}</h1>
+      <h1 class="govuk-heading-xl">{{ tr .App "serviceName" }}</h1>
 
-      {{ .L.HTML "startContent" }}
+      {{ trHtml .App "startContent" }}
 
       <a href="/auth" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-        {{ .L.T "start" }}
+        {{ tr .App "start" }}
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
         </svg>
