--- a/app/web/template/how_would_you_like_to_be_contacted.gohtml
+++ b/app/web/template/how_would_you_like_to_be_contacted.gohtml
@@ -20,28 +20,28 @@
 
               <div class="govuk-checkboxes  {{ if index .Errors "contact" }}govuk-checkboxes--error{{ end }}" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="f-contact" name="contact" type="checkbox" value="email">
+                  <input class="govuk-checkboxes__input" id="f-contact" name="contact" type="checkbox" value="email" {{ if contains "email" .Contact }}checked{{ end }}>
                   <label class="govuk-label govuk-checkboxes__label" for="f-contact">
                     {{ .L.T "email" }}
                   </label>
                 </div>
 
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="f-contact-2" name="contact" type="checkbox" value="phone">
+                  <input class="govuk-checkboxes__input" id="f-contact-2" name="contact" type="checkbox" value="phone" {{ if contains "phone" .Contact }}checked{{ end }}>
                   <label class="govuk-label govuk-checkboxes__label" for="f-contact-2">
                     {{ .L.T "phone" }}
                   </label>
                 </div>
 
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="f-contact-3" name="contact" type="checkbox" value="text message">
+                  <input class="govuk-checkboxes__input" id="f-contact-3" name="contact" type="checkbox" value="text message" {{ if contains "text message" .Contact }}checked{{ end }}>
                   <label class="govuk-label govuk-checkboxes__label" for="f-contact-3">
                     {{ .L.T "textMessage" }}
                   </label>
                 </div>
 
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="f-contact-4" name="contact" type="checkbox" value="post">
+                  <input class="govuk-checkboxes__input" id="f-contact-4" name="contact" type="checkbox" value="post" {{ if contains "post" .Contact }}checked{{ end }}>
                   <label class="govuk-label govuk-checkboxes__label" for="f-contact-4">
                     {{ .L.T "post" }}
                   </label>
