--- a/app/web/template/lpa_type.gohtml
+++ b/app/web/template/lpa_type.gohtml
@@ -15,7 +15,7 @@
           
           <div class="govuk-radios {{ if index .Errors "lpa-type" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="f-lpa-type" name="lpa-type" type="radio" value="pfa" aria-describedby="lpa-type-item-hint">
+              <input class="govuk-radios__input" id="f-lpa-type" name="lpa-type" type="radio" value="pfa" aria-describedby="lpa-type-item-hint" {{ if eq .Type "pfa" }}checked{{ end }}>
               <label class="govuk-label govuk-radios__label" for="f-lpa-type">
                 {{ .L.T "lpaTypePfa" }}
               </label>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="f-lpa-type-2" name="lpa-type" type="radio" value="hw" aria-describedby="lpa-type-2-item-hint">
+              <input class="govuk-radios__input" id="f-lpa-type-2" name="lpa-type" type="radio" value="hw" aria-describedby="lpa-type-2-item-hint" {{ if eq .Type "hw" }}checked{{ end }}>
               <label class="govuk-label govuk-radios__label" for="f-lpa-type-2">
                 {{ .L.T "lpaTypeHw" }}
               </label>
@@ -35,7 +35,7 @@
             </div>
             
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="f-lpa-type-3" name="lpa-type" type="radio" value="both">
+              <input class="govuk-radios__input" id="f-lpa-type-3" name="lpa-type" type="radio" value="both" {{ if eq .Type "both" }}checked{{ end }}>
               <label class="govuk-label govuk-radios__label" for="f-lpa-type-3">
                 {{ .L.T "lpaTypeBoth" }}
               </label>
