--- a/app/web/template/task_list.gohtml
+++ b/app/web/template/task_list.gohtml
@@ -8,7 +8,7 @@
       </h1>
 
       {{ template "details" (details . "taskListHelp" "taskListHelpContent") }}
-      
+
       <ol class="app-task-list govuk-!-margin-top-0" style="position: relative;">
         {{ range $i, $e := .Sections }}
           <li>
@@ -25,6 +25,13 @@
                       </a>
                     </span>
                     <strong class="govuk-tag app-task-list__tag">{{ tr $.App "completed" }}</strong>
+                  {{ else if .InProgress }}
+                    <span class="app-task-list__task-name">
+                      <a href="{{ link $.App .Path }}" class="govuk-link govuk-link--no-visited-state">
+                        {{ tr $.App .Name }}
+                      </a>
+                    </span>
+                    <strong class="govuk-tag app-task-list__tag govuk-tag--blue">{{ tr $.App "inProgress" }}</strong>
                   {{ else if .Disabled }}
                     <span class="app-task-list__task-name govuk-hint govuk-!-margin-bottom-0">
                       {{ tr $.App .Name }}
